# chris_bvh

./: Cargo.toml  Readme.md
assets/models/: armadillo.tri  bigben.tri  unity.tri
benches/: bvh.rs  intersections.rs  test.rs
src/: aabb.rs  axis.rs  bvh.rs  bvh_strategy.rs  intersections.rs  lib.rs  object_pool.rs  ray.rs  triangle.rs
src/bvh_implementations/: mod.rs  simple_bvh.rs  simple_tlbvh.rs  tlbvh.rs  triangle_bvh.rs
