[package]
name = "chris_bvh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = false # use this to debug if necessary

[dependencies]
rand = { version = "*" }
bytemuck = { version = "*" }
approx = { version = "*" }                                          # Testing
glam = { version = "*", features = ["approx", "bytemuck", "rand"] }
strum = { version = "*", features = ["derive"] }
parking_lot = { version = "*" }
num = { version = "*" }
bitvec = { version = "*" }
smallvec = { version = "*" }

[dev-dependencies]
rayon = { version = "*" }
